--- a/css/landing.css
+++ b/css/landing.css
@@ -66,8 +66,9 @@ div.landing h2 {
 }
 
 #thrBG {
-  background-image: url("../img/maryTunnel.png");
-  background-position: center 670px;
+    background-image: url("../img/maryTunnel.png");
+    background-position: center 670px;
+    overflow: auto;
 }
 
 .spContent {
@@ -105,10 +106,10 @@ div.landing h2 {
 
 #bottomContainer {
     width: 900px;
-    position:absolute;
-    left:0;
-    right:0;
-    bottom: 100px;
+    position: absolute;
+    top: 10%;
+    right: 0;
+    left: 0;
     margin: 0 auto 0 auto;
 }
 
