--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     transition: all 0.3s;
 }
 
-#navbar.small > #center > a {
+#navbar.small > #center > .navOp {
     line-height: 50px;
 }
 
@@ -108,6 +108,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 
 .small .logo {
     font-size: 20px;
+    line-height: 50px !important;
 }
 
 .navOp {
